force-app/main/default/objects/Opportunity/fields/Original_Donation_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Donation_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup field that should be used to link an outgoing TBUSA pass thru/coordinated funding donation to the original donation record.</description>
    <label>Original Donation Source</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Donations (Original Donation Source)</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>