force-app/main/default/objects/Opportunity/fields/Outgoing__c.field-meta.xml
<CustomField>
    <fullName>Outgoing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A donation made from ToolBankUSA to another organization</description>
    <inlineHelpText>Is this donation from ToolBank to an outside organization?</inlineHelpText>
    <label>Outgoing</label>
    <type>Checkbox</type>
</CustomField>