force-app/main/default/objects/Opportunity/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Online Credit Card</fullName>
            </value>
            <value>
                <fullName>On-Site Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>