force-app/main/default/objects/Opportunity/fields/reason_Given__c.field-meta.xml
<CustomField>
    <fullName>reason_Given__c</fullName>
    <label>Reason Given</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Lack of Funds</fullName>
            </value>
            <value>
                <fullName>None Given</fullName>
            </value>
            <value>
                <fullName>Poor fit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>