force-app/main/default/objects/Opportunity/fields/Receiving_ToolBank_Organization__c.field-meta.xml
<CustomField>
    <fullName>Receiving_ToolBank_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup field to indicate which ToolBank Affiliate will be receiving a pass thru donation.</description>
    <label>Receiving ToolBank / Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Donations (Receiving ToolBank)</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <type>Lookup</type>
</CustomField>