force-app/main/default/objects/Opportunity/fields/Service_Fee_Amount_Covered__c.field-meta.xml
<CustomField>
    <fullName>Service_Fee_Amount_Covered__c</fullName>
    <label>Service Fee Amount Covered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>