force-app/main/default/objects/Opportunity/fields/Set_Primary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Set_Primary_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set-Primary Campaign</label>
    <type>Checkbox</type>
</CustomField>