force-app/main/default/objects/Opportunity/recordTypes/Corporate_Foundation.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Foundation</fullName>
    <active>true</active>
    <businessProcess>Donation</businessProcess>
    <description>Charitable foundation associated with a for-profit company or vendor (i.e.; Home Depot Foundation, UPS Foundation)</description>
    <label>Corporate Foundation</label>
</RecordType>