force-app/main/default/objects/Opportunity/recordTypes/Corporation.recordType-meta.xml
<RecordType>
    <fullName>Corporation</fullName>
    <active>true</active>
    <businessProcess>Donation</businessProcess>
    <description>For-profit company or vendor (i.e.; Home Depot)</description>
    <label>Corporation</label>
</RecordType>