force-app/main/default/objects/Opportunity/recordTypes/Family_or_Private_Foundation.recordType-meta.xml
<RecordType>
    <fullName>Family_or_Private_Foundation</fullName>
    <active>true</active>
    <businessProcess>Donation</businessProcess>
    <description>Charitable foundation with no direct association to a for-profit company (i.e.; The Blank Foundation)</description>
    <label>Family or Private Foundation</label>
</RecordType>