force-app/main/default/objects/Opportunity/recordTypes/Grant.recordType-meta.xml
<RecordType>
    <fullName>Grant</fullName>
    <active>false</active>
    <businessProcess>Donation</businessProcess>
    <description>Funds dedicated to a specific project</description>
    <label>Grant</label>
</RecordType>