force-app/main/default/objects/Opportunity/recordTypes/In_Kind_Gift.recordType-meta.xml
<RecordType>
    <fullName>In_Kind_Gift</fullName>
    <active>true</active>
    <businessProcess>Donation</businessProcess>
    <description>Non-cash donation, typically goods and services</description>
    <label>In-Kind Gift</label>
</RecordType>