force-app/main/default/objects/Opportunity/recordTypes/Individual.recordType-meta.xml
<RecordType>
    <fullName>Individual</fullName>
    <active>true</active>
    <businessProcess>Donation</businessProcess>
    <description>Private individual, family, or household</description>
    <label>Individual</label>
</RecordType>