force-app/main/default/objects/Opportunity/recordTypes/MatchingDonation.recordType-meta.xml
<RecordType>
    <fullName>MatchingDonation</fullName>
    <active>false</active>
    <businessProcess>Donation</businessProcess>
    <description>Matching Donation from an Donor&apos;s Employer or other Organization</description>
    <label>Matching Donation</label>
</RecordType>