force-app/main/default/objects/Opportunity/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <businessProcess>Donation</businessProcess>
    <description>Government, nonprofit partner, faith-based, business association</description>
    <label>Other</label>
</RecordType>