force-app/main/default/objects/Opportunity/validationRules/Person_or_Org_Recorded_on_Donation.validationRule-meta.xml
<ValidationRule>
    <fullName>Person_or_Org_Recorded_on_Donation</fullName>
    <active>true</active>
    <description>Ensures either a person or organization is recorded on the record</description>
    <errorConditionFormula>AND(ISBLANK(AccountId) ,ISBLANK(npsp__Primary_Contact__c ), Anonymous__c  = FALSE)</errorConditionFormula>
    <errorMessage>You must connect this donation to either an organization or a primary contact.</errorMessage>
</ValidationRule>