force-app/main/default/objects/Opportunity/listViews/AllDonations.listView-meta.xml
<ListView>
    <fullName>AllDonations</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSED</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>npsp__Primary_Contact__c</field>
        <operation>contains</operation>
        <value>flory</value>
    </filters>
    <label>All Donations</label>
</ListView>