force-app/main/default/objects/Opportunity/listViews/In_Kind_Donations.listView-meta.xml
<ListView>
    <fullName>In_Kind_Donations</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSED</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>In_kind__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>In_kind__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>In-Kind Donations (checkbox)</label>
</ListView>