force-app/main/default/objects/Opportunity/listViews/In_Kind_Gift_Record_Type.listView-meta.xml
<ListView>
    <fullName>In_Kind_Gift_Record_Type</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.CLOSED</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>In_kind__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.In_Kind_Gift</value>
    </filters>
    <label>In-Kind Gift (Record Type)</label>
</ListView>