force-app/main/default/objects/Opportunity/listViews/Other_Donations.listView-meta.xml
<ListView>
    <fullName>Other_Donations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>OPPORTUNITY.CLOSED</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Other</value>
    </filters>
    <label>Other Donations</label>
</ListView>